--- a/views/post_detail.mustache
+++ b/views/post_detail.mustache
@@ -24,5 +24,13 @@
 <h4>{{post.title}}</h4>
 <h4>User: {{post.username}}</h4>
 <p>{{post.body}}</p>
+{{#comments}}
+  {{title}}
+  {{user}}
+  {{body}}
+{{/comments}}
+{{^comments}}
+<p>No comments yet</p>
+{{/comments}}
 </body>
 </html>
