--- a/views/post_detail.mustache
+++ b/views/post_detail.mustache
@@ -11,23 +11,21 @@
 <form method = 'GET' action = '/logout'>
     <button class="buttons">Logout {{username}}</button>
 </form>
+<h3>Add a comment</h3>
+<form method = 'POST' action='/add-comment'>
+  <button  class="buttons">Submit</button>
+  <textarea rows="5" cols="50" name="body" placeholder="body"></textarea>
+</form>
 {{/username}}
 {{^username}}
 <p>Not logged in</p>
 {{/username}}
-<h3>Add a comment</h3>
-<form method = 'POST' action='/comments'>
-  <input type="text" class="titleBox" placeholder="title" name="title">
-  <button  class="buttons">Submit</button>
-  <textarea rows="5" cols="50" name="body" placeholder="body"></textarea>
-</form>
 <h4>{{post.title}}</h4>
 <h4>User: {{post.username}}</h4>
 <p>{{post.body}}</p>
 {{#comments}}
 <form method='POST' action = '/delete-comment'>
-  <h4>{{title}}</h4>
-  <h4>User: {{username}}</h4>
+  <h4>User: {{name}}</h4>
   <p>{{body}}</p>
   <input type="hidden" value={{comment_id}} name="del_comment">
   <button class="buttons" {{owned}}>Remove</button>
