--- a/views/posts.mustache
+++ b/views/posts.mustache
@@ -16,6 +16,9 @@
     <input type="hidden" value = 2 name = "post_id">
     <button class="buttons">TEST POST DETAIL - post_id = 2</button>
 </form>
+<form method = 'get' action = '/home'>
+    <button class="buttons">home button</button>
+</form>
 
 <h3>Add or update an entry</h3>
 <form method = 'POST' action='/posts'>
