--- a/views/home.mustache
+++ b/views/home.mustache
@@ -12,7 +12,7 @@
     <br>
     <b>{{title}}</b>
     <p>comments: </p>
-    <form method="post" action="/post-detail/:postId">
+    <form method="POST" action="/post-detail">
       <input type="hidden" name="postId" value="{{post_id}}">
       <input type="submit" name="submit" value="Details">
     </form>
